SubBt/force-app/main/default/objects/Account_Payable_Item__c/Account_Payable_Item__c.object-meta.xml
<CustomObject>
    <description>Line Items for Invoice (PO)</description>
    <label>Invoice Line (PO)</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines (PO)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>