SubBt/force-app/main/default/objects/Account_Payable_Item__c/fields/Account_Payable__c.field-meta.xml
<CustomField>
    <fullName>Account_Payable__c</fullName>
    <label>Invoice (AP)</label>
    <referenceTo>Account_Payable__c</referenceTo>
    <relationshipName>Account_Payable_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>