SubBt/force-app/main/default/objects/Account_Payable_Item__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>INVL-{000000}</displayFormat>
    <label>Invoice Line #</label>
    <type>AutoNumber</type>
</CustomField>