SubBt/force-app/main/default/objects/Account_Payable_Item__c/fields/Item_Title__c.field-meta.xml
<CustomField>
    <fullName>Item_Title__c</fullName>
    <label>Item Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>