SubBt/force-app/main/default/objects/Account_Payable_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Account_Payable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>