SubBt/force-app/main/default/objects/Account_Payable_Item__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Item</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipName>Accounts_Payable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>