SubBt/force-app/main/default/objects/Account_Payable_Item__c/fields/Total_Amount_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_With_Tax__c</fullName>
    <formula>Total_Price__c + ( (Quantity__c * Unit_Price__c) * Tax__c )</formula>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>